--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
             <a href="projects.html">projects</a>
           </li>
           <li>
-            <a href="contact.html">contact</a>
+            <a href="contact.html">contact page</a>
           </li>
         </ul>
         <!-- social media -->
